deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cueme-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cueme-api
  template:
    metadata:
      labels:
        app: cueme-api
    spec:
      containers:
        - image: krispykalsi/cueme-api:3.0
          name: cueme-api
          volumeMounts:
            - name: secrets
              mountPath: "/cueme-secrets"
              readOnly: true
      volumes:
        - name: secrets
          secret:
            secretName: keys-476ggmc4tk
