service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cueme-api
  labels:
    app: cueme-api
spec:
  ports:
    - name: "cueme-api"
      port: 8080
  selector:
    app: cueme-api
