ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: cueme-api
  name: cueme-api-ingress
spec:
  rules:
    - host: cueme.xyz
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cueme-api
                port:
                  number: 8080
